--- a/pages/templates/layouts/base-fullscreen.html
+++ b/pages/templates/layouts/base-fullscreen.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>
-    {{app_name}} - {% block title %}{% endblock %}
+    {% block title %}{% endblock %} - {{ global_context().app_name }}
   </title>
 
   <!-- Specific Page CSS goes HERE  -->
