feat : page system akun

--- a/core/html/layouts/base.html
+++ b/core/html/layouts/base.html
@@ -15,13 +15,13 @@
 <body class="hold-transition {% block body_class %}{% endblock body_class %}">
 <div class="wrapper">
 
-    {% include 'includes/navigation.html' %}
+    {% include 'core/html/includes/navigation.html' %}
 
-    {% include 'includes/sidebar.html' %}
+    {% include 'core/html/includes/sidebar.html' %}
 
     {% block content %}{% endblock content %}
 
-    {% include 'includes/footer.html' %}
+    {% include 'core/html/includes/footer.html' %}
 
     <!-- Control Sidebar -->
     <!-- <aside class="control-sidebar control-sidebar-dark">
