fix : app user_scope

--- a/core/html/includes/navigation.html
+++ b/core/html/includes/navigation.html
@@ -52,8 +52,8 @@
           <img src="/static/assets/img/avatar4.png" class="img-circle elevation-2" alt="User Image">
 
           <p>
-            {{userloggedin.full_name}}
-            <small>Member mulai {{userloggedin.created_at.strftime('%b. %Y')}}</small>
+            {{userloggedin.username}}
+            <small>Member mulai </small>
           </p>
         </li>
         <!-- Menu Footer-->
