fix : page sys akun

--- a/core/html/includes/sidebar.html
+++ b/core/html/includes/sidebar.html
@@ -3,7 +3,7 @@
   <!-- Brand Logo -->
   <a href="/" class="brand-link">
     <img src="/static/favicon.ico" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">{{app_name}}</span>
+    <span class="brand-text font-weight-light">{{global_context().app_name}}</span>
   </a>
 
   <!-- Sidebar -->
