--- a/core/html/layouts/base.html
+++ b/core/html/layouts/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>
-    {% block title %}{% endblock %} - {{app_name}}
+    {% block title %}{% endblock %} - {{global_context().app_name}}
   </title> 
 
   {% block stylesheets %}{% endblock stylesheets %}
