--- a/core/html/includes/sidebar.html
+++ b/core/html/includes/sidebar.html
@@ -11,7 +11,7 @@
     <!-- Sidebar user panel (optional) -->
     <!-- Sidebar Menu -->
     <nav class="mt-2">
-      {{sidemenu|safe}}
+      {{menu_sidebar|safe}}
     </nav>
     <!-- /.sidebar-menu -->
   </div>
