fix : core html include

--- a/core/html/includes/footer.html
+++ b/core/html/includes/footer.html
@@ -5,4 +5,4 @@
     <a target="_blank" rel="noopener noreferrer" href="https://rsud.pacitankab.go.id/">RSUD dr DARSONO</a>
   </div>
 </footer>
-<script> setTimeout(function () { window.location.href = "/auth/timeout/{{userloggedin.username}}" }, {{ TOKEN_EXPIRED }});</script>
+<script> setTimeout(function () { window.location.href = "/auth/timeout/{{userloggedin.username|safe}}" }, {{ TOKEN_EXPIRED }});</script>
