--- a/core/html/includes/navigation.html
+++ b/core/html/includes/navigation.html
@@ -58,7 +58,7 @@
         </li>
         <!-- Menu Footer-->
         <li class="user-footer">
-          <a href="/page/profile/" class="btn btn-default btn-flat">Profile</a>
+          <a href="/auth/profile" class="btn btn-default btn-flat">Profile</a>
           <a href="/auth/logout/{{userloggedin.username}}" id="logout" class="btn btn-default btn-flat float-right">Sign out</a>
         </li>
       </ul>
